--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<link rel="icon" href="images/bookfavicon.png">
 	<link rel="stylesheet" href="css/html5reset.css">
 	<link rel="stylesheet" href="css/style.css">
-	<title>Book Club</title>
+	<title>Pratiksha's Book Blog</title>
 </head>
 
 <body>
@@ -22,17 +22,28 @@
 			</ul>
 		</nav>
 		<h1>Pratiksha's Book Blog</h1>
-		<p>test</p>
-        
 	</header>
 
 	<main>
 		<h2 id="main">"You can never get a cup of tea large enough or a book long enough to suit me." - C.S. Lewis</h2>
-        <p>Hi nice to meet you! My name is Pratiksha Badola and I am, among other things, a passionate reader. I love sharing my thoughts on books with others and engaging with others about my favourite books, and this blog is a manifestation of that! Here I review my recent reads, update my TBR list and host my book club! If any of that interests you, read on!</p>
+        <p>It turns out C.S. Lewis and I have a lot in common. My name is Pratiksha and one of my greatest joys in life is 
+			curling up with a good book and a cup of tea. I've always loved to read, though as I progressed through life, reading 
+			often took a back burner as school became more demanding. To combat this, I have been making it a conscious effort to stay consistent with 
+			reading, and one way I do this is by establishing reading goals (for 2022, I am aiming to read 30 books). Another way I found I was able
+			to stay consistent with reading was through hosting and participating in book clubs with my friends! I've always loved engaging with others on my
+			favourite books, and continuing this practice in a more intentional, structured way through a book club not only helped me stay consistent with reading, 
+			it also fostered my intellectual curiousity, opened me up to diverse viewpoints, and helped me get to know my friends better.  The goal of
+			blog is to track my reading journey and bring along anyone else who may be interested. Here, I will update my TBR list, review recent reads, 
+			and have a space to join my book club! 
+		 </p>
         <img class="landingpage" src = "images/landingpage.jpeg" alt="books laid open, a pair of glasses in the center" width="200"/>
-        <p>A little about my readiing journey...</p>
-        <p>When I was in the 5th grade, my teacher read Harry Potter and the Philosopher's Stone to the class. I had no idea books could be so transporting, vivid, and fun. I was hooked. Not long after that the Twilight phenomenon took off. The double impact of the Harry Potter and Twilight series so early on in my life made me an avid reader. So although those series may seen juvenile, they were really a gateway to a world of words, and I haven't looked back since. 
-			Though as I progressed through school and life, reading often took a back burner as school became more demanding. To combat this, I have been making it a conscious effort to stay consistent with reading, and one way I do this is by establishing yearly reading goals. For 2022, I am aiming to read 30 books. 
+        <h2>A little about my reading journey...</h2>
+        <p>In the 5th grade, my teacher read Harry Potter and the Philosopher's Stone to the class. I had no idea books could 
+			be so transporting, vivid, and fun. I read through the rest of the series on my own, and I was hooked. Not long after that the YA genre really took 
+			off with other series' like Percy Jackson, Twilight, and the Hunger Games. These books had a loyal, expansive, and highly enthusiastic fanbase, which
+			made books not only a place of quiet escape, but also collective experience that I found incredibly gratifying. 
+			This impact of these popular YA series' so early on in my life made books a central force in my life. So although those series may seen juvenile, 
+			they were really a gateway to a world of words, and I haven't looked back since. 
 		</p>
 
 	</main>
