--- a/reviews.html
+++ b/reviews.html
@@ -27,7 +27,7 @@
 	</header>
 	
 	<main>
-		<h2 id="main">H2 stub</h2>
+		<h2 id="main">Recent Reads</h2>
 		<div class="row">
 			<div class = "book">
 				<p>The Dutch House by Ann Patchett</p>
