--- a/tbr.html
+++ b/tbr.html
@@ -6,6 +6,8 @@
 	<link rel="icon" href="images/bookfavicon.png">
 	<link rel="stylesheet" href="css/html5reset.css">
 	<link rel="stylesheet" href="css/style.css">
+	<title>TBR</title>
+
 
 
 </head>
